--- a/index.html
+++ b/index.html
@@ -69,6 +69,14 @@
 
     </section>
 
+    <section id="price">
+        <h2 id="choose">Product & Prices</h2>
+        <p id="why">Check out our products and prices</p>
+
+        <br>
+        <button onclick="" id="btn_view">VIEW PRODUCTS</button>
+    </section>
+
 </body>
 
 </html>
