--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+
     <script>
         $(document).ready(function() {
             $('#icon').click(function() {
@@ -74,8 +75,49 @@
         <p id="why">Check out our products and prices</p>
 
         <br>
-        <button onclick="" id="btn_view">VIEW PRODUCTS</button>
+        <button id="btn_view" onclick="window.location.href='products.html'">VIEW PRODUCTS</button>
+        <br>
+        <img src="cake_2.jpg" alt="cake image" id="image_show">
     </section>
+
+    <section id="bottom">
+        <br>
+        <p id="quick">Quick Links</p>
+        <br>
+
+        <br>
+        <a href="#" id="down">Home</a>
+        <br>
+
+        <br>
+        <a href="#" id="down">Delivery services</a>
+        <br>
+
+        <br>
+        <a href="#" id="down">Menu</a>
+        <br>
+
+        <br>
+        <a href="#" id="faq">FAQ</a>
+        <br><br>
+    </section>
+
+    <div>
+        <p id="loc">Location</p>
+        <br>
+        <a href="#" id="place">East Legon</a>
+        <br><br>
+    </div>
+
+    <div class="social">
+        <p id="follow">Follow us on</p>
+        <label id="social_media">
+        <a href="https://www.facebook.com/steamanexpress/" class="fa fa-facebook"></a>
+        <a href="https://twitter.com/expresssteaman?lang=en" class="fa fa-twitter"></a>
+    </label>
+    </div>
+
+
 
 </body>
 
