--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <br>
 
         <br>
-        <a href="#" id="down">Home</a>
+        <a href="#" id="down" target="_blank">Home</a>
         <br>
 
         <br>
@@ -94,12 +94,16 @@
         <br>
 
         <br>
-        <a href="#" id="down">Menu</a>
+        <a href="#" id="down" target="_blank">Menu</a>
         <br>
 
         <br>
-        <a href="#" id="faq">FAQ</a>
+        <a href="#" id="faq" target="_blank">FAQ</a>
+        <br>
+        <br>
         <br><br>
+        <br>
+
     </section>
 
     <div>
@@ -112,11 +116,15 @@
     <div class="social">
         <p id="follow">Follow us on</p>
         <label id="social_media">
-        <a href="https://www.facebook.com/steamanexpress/" class="fa fa-facebook"></a>
-        <a href="https://twitter.com/expresssteaman?lang=en" class="fa fa-twitter"></a>
+        <a href="https://www.facebook.com/steamanexpress/" class="fa fa-facebook" target="_blank"></a>
+        <a href="https://twitter.com/expresssteaman?lang=en" class="fa fa-twitter" target="_blank"></a>
+        <a href="https://www.instagram.com/shebakesgh/reels/?hl=en" class="fa fa-instagram" target="_blank"></a>
     </label>
     </div>
 
+    <p id="copyright">
+        <i>Copyright &copy; 2021 by Shebakesgh. All rights reserved.Powered by <em>PYSTUDIOS</em></i>
+    </p>
 
 
 </body>
