--- a/contact.html
+++ b/contact.html
@@ -49,19 +49,19 @@
     <h2 id="contact_details">CONTACT DETAILS</h2>
     <div id="details">
 
-        <p class="add">Address</p>
+        <p class="add">• Address</p>
         <br>
         <p> East Legon LG 25</p>
         <br>
         <br>
-        <p class="add">Phone number</p>
+        <p class="add">• Phone number</p>
         <br>
         <p>0201987652</p>
         <br>
         <br>
-        <p class="add">Mail</p>
+        <p class="add">• Mail</p>
         <br>
-        <p>sheBakesgh@gmail.com</p>
+        <a id="email" href="#">sheBakesgh@gmail.com</a>
     </div>
 
 </body>
