--- a/about.html
+++ b/about.html
@@ -6,14 +6,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us</title>
-    <link rel="Stylesheet" href="contact.css">
+    <link rel="Stylesheet" href="about.css">
 </head>
 
 <body>
     <nav>
-        <label>ABOUT US</label>
+        <label id="about">ABOUT US</label>
     </nav>
 
+    <h1 id="mission">MISSION</h1>
+    <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum voluptas cupiditate assumenda, iste amet nemo itaque, consectetur facilis impedit totam voluptates accusantium facere veritatis magni! Expedita dolor necessitatibus nulla est.</P>
+    <h1 id="vision">VISION</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa dolore omnis quod non fuga, voluptas fugiat soluta deserunt aliquid praesentium architecto pariatur nemo repudiandae. Reiciendis assumenda id a doloribus aspernatur.</p>
+    <h1 id="values">VALUES</h1>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos libero possimus molestias eius minus debitis! Officia unde eaque repudiandae voluptates assumenda ratione. Laudantium sapiente, aspernatur voluptatibus quos debitis nesciunt inventore?</p>
 </body>
 
 </html>
